fixed z-indexes frfr

--- a/.where-the-magic-is/css/player.css
+++ b/.where-the-magic-is/css/player.css
@@ -1,6 +1,5 @@
 .player {
   --bottom: 1;
-  max-width: 80px;
   position: absolute;
   left: 50px;
   bottom: calc(var(--bottom) * 1%);
