--- a/.where-the-magic-is/css/score.css
+++ b/.where-the-magic-is/css/score.css
@@ -7,7 +7,7 @@
   right: 0.5rem;
   top: 0.5rem;
   background-color: var(--bg-color);
-  z-index: 1;
+  z-index: -1;
   border-radius: 15px;
   padding: 0.5rem 0.5rem 0.3em;
   color: rgb(0, 0, 0);
